call-center/src/objects/Payor__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Description__c</fullName>
        <label>External Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Origin_Code__c</fullName>
        <label>Origin Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sirono_Id__c</fullName>
        <externalId>true</externalId>
        <label>Sirono ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unmapped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unmapped</label>
        <type>Checkbox</type>
    </fields>
    <label>Payor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Origin_Code__c</columns>
        <columns>External_Id__c</columns>
        <columns>Sirono_ID__c</columns>
        <columns>Unique_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>